fix: ESLint 설정 수정
- react-three/cannon 디펜던시 추가
- ESLint react/no-unknown-property off 설정 추가
- ESLint settings에 import/core-modules로 react-three/cannon 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,13 @@
     "quotes": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [
+      "error",
+      { "extensions": [".js", ".jsx"] }
+    ],
+    "react/no-unknown-property": "off"
+  },
+  "settings": {
+    "import/core-modules": ["@react-three/cannon"]
   }
 }
