fix: 코드 리뷰 수정사항 변경
- 파일 import 순서 변경
- inline style css -> styled components 변경
- 개행
- eslint 설정 변경
- 불필요한 기본 세팅 값 삭제

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,9 +13,7 @@
       "error",
       { "extensions": [".js", ".jsx"] }
     ],
-    "react/no-unknown-property": "off"
-  },
-  "settings": {
-    "import/core-modules": ["@react-three/cannon"]
+    "react/no-unknown-property": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
