chore: ESLint 설정 추가
- devDependencies에 @babel/core, @babel/eslint-parser 추가
- ESLint 속성 전체적으로 변경

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,37 @@
 {
+  "parser": "@babel/eslint-parser",
+  "extends": [
+    "airbnb",
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended",
+    "prettier/react"
+  ],
+  "plugins": ["react", "prettier", "import"],
   "env": {
+    "browser": true,
     "es2021": true,
-    "node": true,
-    "browser": true
+    "node": true
   },
-  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
-    "quotes": "off",
-    "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [
-      "error",
-      { "extensions": [".js", ".jsx"] }
-    ],
-    "react/no-unknown-property": "off",
-    "import/no-extraneous-dependencies": "off"
+    "quotes": ["error", "double"]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"]
+      }
+    },
+    "react": {
+      "version": "detect"
+    }
   }
 }
