feat: 스테이지 레벨 및 스크린 모드 상태 전역관리 설정
- redux, react-redux 및 redux-toolkit 설치
- ESLint 예외처리

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
       "error",
       { "extensions": [".js", ".jsx"] }
     ],
-    "react/no-unknown-property": "off"
+    "react/no-unknown-property": "off",
+    "no-param-reassign": 0
   },
   "settings": {
     "import/resolver": {
@@ -41,6 +42,7 @@
     },
     "react": {
       "version": "detect"
-    }
+    },
+    "import/core-modules": ["react-redux", "@reduxjs/toolkit"]
   }
 }
