feat: 기본적인 path graph 구현
- graph addNode, addEdge, removeEdge, removeNode 메소드 구현
- 높이가 없는 패스만 찾아주는 getPathPositions 함수 구현
- 인접한 좌표를 찾는 isNextPosition 함수 구현
- 전체적인 path를 만드는 createPath 함수 구현
- for 안에서 ++ 사용하도록 eslint 수정
- Cube components에 불필요한 ref 삭제하고 position으로 수정
- StageZero에 createPath 연결 (임시로 연결해놔서 no unused lint 한 줄 설정해놨습니다)
- 데이터에 출발지, 도착지 좌표 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
       { "extensions": [".js", ".jsx"] }
     ],
     "react/no-unknown-property": "off",
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
   },
   "settings": {
     "import/resolver": {
