--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,9 @@
     ],
     "react/no-unknown-property": "off",
     "no-param-reassign": 0,
-    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "func-names": ["error", "never"]
   },
   "settings": {
     "import/resolver": {
