--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0"
+    "lint-staged": "^13.2.0",
+    "redux-logger": "^3.0.6"
   },
   "lint-staged": {
     "*.{js,jsx}": [
